Staff API model refactored
