# server/src/main/java/com/cezarykluczynski/stapi/server/staff/endpoint/StaffRestEndpoint.java
@@ -1,10 +1,10 @@
 package com.cezarykluczynski.stapi.server.staff.endpoint;
 
-import com.cezarykluczynski.stapi.client.v1.rest.model.StaffResponse;
+import com.cezarykluczynski.stapi.client.v1.rest.model.StaffBaseResponse;
+import com.cezarykluczynski.stapi.client.v1.rest.model.StaffFullResponse;
 import com.cezarykluczynski.stapi.server.common.dto.PageSortBeanParams;
 import com.cezarykluczynski.stapi.server.staff.dto.StaffRestBeanParams;
 import com.cezarykluczynski.stapi.server.staff.reader.StaffRestReader;
-import org.springframework.stereotype.Service;
 
 import javax.inject.Inject;
 import javax.ws.rs.BeanParam;
@@ -13,9 +13,9 @@ import javax.ws.rs.GET;
 import javax.ws.rs.POST;
 import javax.ws.rs.Path;
 import javax.ws.rs.Produces;
+import javax.ws.rs.QueryParam;
 import javax.ws.rs.core.MediaType;
 
-@Service
 @Path("v1/rest/staff")
 @Produces(MediaType.APPLICATION_JSON)
 public class StaffRestEndpoint {
@@ -29,14 +29,22 @@ public class StaffRestEndpoint {
 
 	@GET
 	@Consumes(MediaType.APPLICATION_JSON)
-	public StaffResponse getStaffs(@BeanParam PageSortBeanParams pageSortBeanParams) {
+	public StaffFullResponse getStaff(@QueryParam("guid") String guid) {
+		return staffRestReader.readFull(guid);
+	}
+
+	@GET
+	@Path("search")
+	@Consumes(MediaType.APPLICATION_JSON)
+	public StaffBaseResponse searchStaff(@BeanParam PageSortBeanParams pageSortBeanParams) {
 		return staffRestReader.readBase(StaffRestBeanParams.fromPageSortBeanParams(pageSortBeanParams));
 	}
 
 	@POST
+	@Path("search")
 	@Consumes(MediaType.APPLICATION_FORM_URLENCODED)
-	public StaffResponse searchStaffs(@BeanParam StaffRestBeanParams seriesRestBeanParams) {
-		return staffRestReader.readBase(seriesRestBeanParams);
+	public StaffBaseResponse searchStaff(@BeanParam StaffRestBeanParams staffRestBeanParams) {
+		return staffRestReader.readBase(staffRestBeanParams);
 	}
 
 }
