# server/src/main/java/com/cezarykluczynski/stapi/server/staff/mapper/StaffRestMapper.java
@@ -2,6 +2,7 @@ package com.cezarykluczynski.stapi.server.staff.mapper;
 
 import com.cezarykluczynski.stapi.model.staff.dto.StaffRequestDTO;
 import com.cezarykluczynski.stapi.model.staff.entity.Staff;
+import com.cezarykluczynski.stapi.server.character.mapper.CharacterRestMapper;
 import com.cezarykluczynski.stapi.server.common.mapper.DateMapper;
 import com.cezarykluczynski.stapi.server.common.mapper.EnumMapper;
 import com.cezarykluczynski.stapi.server.common.mapper.RequestSortRestMapper;
@@ -15,11 +16,15 @@ import org.mapstruct.Mappings;
 
 import java.util.List;
 
-@Mapper(config = MapstructConfiguration.class, uses = {DateMapper.class, EnumMapper.class,
-		EpisodeHeaderRestMapper.class, MovieHeaderRestMapper.class, RequestSortRestMapper.class})
+@Mapper(config = MapstructConfiguration.class, uses = {CharacterRestMapper.class, DateMapper.class, EnumMapper.class, EpisodeHeaderRestMapper.class,
+		MovieHeaderRestMapper.class, RequestSortRestMapper.class})
 public interface StaffRestMapper {
 
-	StaffRequestDTO map(StaffRestBeanParams performerRestBeanParams);
+	StaffRequestDTO mapBase(StaffRestBeanParams staffRestBeanParams);
+
+	com.cezarykluczynski.stapi.client.v1.rest.model.StaffBase mapBase(Staff staff);
+
+	List<com.cezarykluczynski.stapi.client.v1.rest.model.StaffBase> mapBase(List<Staff> staffList);
 
 	@Mappings({
 			@Mapping(target = "writtenEpisodeHeaders", source = "writtenEpisodes"),
@@ -34,8 +39,6 @@ public interface StaffRestMapper {
 			@Mapping(target = "producedMovieHeaders", source = "producedMovies"),
 			@Mapping(target = "movieHeaders", source = "movies")
 	})
-	com.cezarykluczynski.stapi.client.v1.rest.model.Staff map(Staff staff);
-
-	List<com.cezarykluczynski.stapi.client.v1.rest.model.Staff> map(List<Staff> staffList);
+	com.cezarykluczynski.stapi.client.v1.rest.model.StaffFull mapFull(Staff staff);
 
 }
