# server/src/main/java/com/cezarykluczynski/stapi/server/staff/query/StaffSoapQuery.java
@@ -1,6 +1,7 @@
 package com.cezarykluczynski.stapi.server.staff.query;
 
-import com.cezarykluczynski.stapi.client.v1.soap.StaffRequest;
+import com.cezarykluczynski.stapi.client.v1.soap.StaffBaseRequest;
+import com.cezarykluczynski.stapi.client.v1.soap.StaffFullRequest;
 import com.cezarykluczynski.stapi.model.staff.dto.StaffRequestDTO;
 import com.cezarykluczynski.stapi.model.staff.entity.Staff;
 import com.cezarykluczynski.stapi.model.staff.repository.StaffRepository;
@@ -28,10 +29,15 @@ public class StaffSoapQuery {
 		this.staffRepository = staffRepository;
 	}
 
-	public Page<Staff> query(StaffRequest staffRequest) {
-		StaffRequestDTO staffRequestDTO = staffSoapMapper.map(staffRequest);
+	public Page<Staff> query(StaffBaseRequest staffRequest) {
+		StaffRequestDTO staffRequestDTO = staffSoapMapper.mapBase(staffRequest);
 		PageRequest pageRequest = pageMapper.fromRequestPageToPageRequest(staffRequest.getPage());
 		return staffRepository.findMatching(staffRequestDTO, pageRequest);
+	}
+
+	public Page<Staff> query(StaffFullRequest staffFullRequest) {
+		StaffRequestDTO staffRequestDTO = staffSoapMapper.mapFull(staffFullRequest);
+		return staffRepository.findMatching(staffRequestDTO, pageMapper.getDefaultPageRequest());
 	}
 
 }
